// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-smooch-web-integration Everything is successful Walkthrough passes in the correct arguments to SmoochCore 1`] = `
Array [
  Array [
    Object {
      "keyId": undefined,
      "scope": "app",
      "secret": undefined,
      "serviceUrl": "mock-smooch-api-url",
    },
  ],
]
`;

exports[`get-smooch-web-integration Everything is successful Walkthrough passes in the correct arguments to decClient.get() 1`] = `
Array [
  Array [
    Object {
      "Key": Object {
        "id": "667802d8-2260-436c-958a-2ee0f71f73f0",
        "tenant-id": "66d83870-30df-4a3b-8801-59edff162034",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
]
`;

exports[`get-smooch-web-integration Everything is successful Walkthrough passes in the correct arguments to secretsClient.getSecretValue() 1`] = `
Array [
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
]
`;

exports[`get-smooch-web-integration Everything is successful Walkthrough passes in the correct arguments to smooch.integrations.get() 1`] = `
Array [
  Array [
    undefined,
    "667802d8-2260-436c-958a-2ee0f71f73f0",
  ],
]
`;

exports[`get-smooch-web-integration Everything is successful Walkthrough passes in the correct arguments to validatePlatformPermissions 1`] = `
Array [
  Array [
    Object {
      "user-id": "667802d8-2260-436c-958a-2ee0f71f73f0",
    },
    Array [
      "PLATFORM_VIEW_ALL",
    ],
  ],
]
`;

exports[`get-smooch-web-integration Everything is successful Walkthrough passes in the correct arguments to validateTenantPermissions 1`] = `
Array [
  Array [
    "66d83870-30df-4a3b-8801-59edff162034",
    Object {
      "user-id": "667802d8-2260-436c-958a-2ee0f71f73f0",
    },
    Array [
      "WEB_INTEGRATIONS_APP_READ",
    ],
  ],
]
`;

exports[`get-smooch-web-integration Everything is successful sends back status 200 if the code runs without error 1`] = `
Object {
  "body": Object {
    "result": Object {
      "0": Object {
        "app-id": "5e31c81640a22c000f5d7f28",
        "type": "",
      },
      "actionColor": "#1be54c",
      "brandColor": "#1b3de5",
      "conversationColor": "#e53f1b",
      "prechatCapture": "name",
      "whitelistedUrls": Array [
        "url1",
        "url2",
      ],
    },
  },
  "status": 200,
}
`;

exports[`get-smooch-web-integration Everything is successful when brandcolor, conversationcolor and actioncolor is not provided 1`] = `
Object {
  "body": Object {
    "result": Object {
      "0": Object {
        "app-id": "5e31c81640a22c000f5d7f28",
        "type": "",
      },
      "prechatCapture": "name",
      "whitelistedUrls": Array [
        "url1",
        "url2",
      ],
    },
  },
  "status": 200,
}
`;

exports[`get-smooch-web-integration Everything is successful when prechatCapture is disabled 1`] = `
Object {
  "body": Object {
    "result": Object {
      "0": Object {
        "app-id": "5e31c81640a22c000f5d7f28",
        "type": "",
      },
      "prechatCapture": "none",
      "whitelistedUrls": undefined,
    },
  },
  "status": 200,
}
`;

exports[`get-smooch-web-integration sends back status 400 error when there are invalid parameters 1`] = `
Object {
  "body": Object {
    "message": "Error: invalid params value \\"id\\" is required",
  },
  "status": 400,
}
`;

exports[`get-smooch-web-integration sends back status 400 error when there are not enough permissions 1`] = `
Object {
  "body": Object {
    "message": "Error not enough permissions",
  },
  "status": 400,
}
`;

exports[`get-smooch-web-integration sends back status 500 when the app does not exit for tenant 1`] = `
Object {
  "body": Object {
    "message": "The app does not exist for this tenant",
  },
  "status": 500,
}
`;

exports[`get-smooch-web-integration sends back status 500 when there is a error fetching the app in DynamoDB 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to fetch an app in DynamoDB",
  },
  "status": 500,
}
`;

exports[`get-smooch-web-integration sends back status 500 when there is a error retrieving digital channels credentials  1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve digital channels credentials",
  },
  "status": 500,
}
`;

exports[`get-smooch-web-integration sends back status 500 when there is a error validating digital channels credentials 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to validate digital channels credentials",
  },
  "status": 500,
}
`;

exports[`get-smooch-web-integration sends back status 500 when there is error fetching web integration 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to fetch a web integration",
  },
  "status": 500,
}
`;
